force-app/main/default/objects/Proyeccion__c/Proyeccion__c.object-meta.xml
<CustomObject>
    <label>Proyección</label>
    <nameField>
        <displayFormat>PYC-{000000000}</displayFormat>
        <label>Nombre de Proyección</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proyecciones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>