force-app/main/default/objects/Proyeccion__c/fields/Anios__c.field-meta.xml
<CustomField>
    <fullName>Anios__c</fullName>
    <label>Años</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>25</fullName>
                <default>true</default>
                <label>25</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>