force-app/main/default/objects/Proyeccion__c/fields/AporteInicial__c.field-meta.xml
<CustomField>
    <fullName>AporteInicial__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Aporte Inicial</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>