force-app/main/default/objects/Proyeccion__c/fields/ComisionSaldo__c.field-meta.xml
<CustomField>
    <fullName>ComisionSaldo__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Comisión por Saldo</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>