force-app/main/default/objects/Proyeccion__c/fields/Correo__c.field-meta.xml
<CustomField>
    <fullName>Correo__c</fullName>
    <formula>IF(Cliente__c != null, Cliente__r.PersonEmail, IF(PreVenta__c != null, PreVenta__r.Email__c,Prospecto__r.Email))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Correo</label>
    <type>Text</type>
</CustomField>