force-app/main/default/objects/Proyeccion__c/fields/CreacionUltimoEnvio__c.field-meta.xml
<CustomField>
    <fullName>CreacionUltimoEnvio__c</fullName>
    <formula>TEXT(DAY(DATEVALUE(CreatedDate))) + &quot;/&quot; + TEXT(MONTH(DATEVALUE(CreatedDate))) + &quot;/&quot; + TEXT(YEAR(DATEVALUE(CreatedDate))) + &quot; || &quot; + IF(TEXT( UltimoCorreoEnviado__c) != &quot;Z&quot;, TEXT(DAY(DATEVALUE(UltimoCorreoEnviado__c))) + &quot;/&quot; + TEXT(MONTH(DATEVALUE(UltimoCorreoEnviado__c))) + &quot;/&quot; + TEXT(YEAR(DATEVALUE(UltimoCorreoEnviado__c))), &quot;N/A&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha de Creación y Último envío</label>
    <type>Text</type>
</CustomField>