force-app/main/default/objects/Proyeccion__c/fields/EsComisionPorAporte__c.field-meta.xml
<CustomField>
    <fullName>EsComisionPorAporte__c</fullName>
    <formula>ComisionAporte__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Es Comisión por Aporte</label>
    <type>Checkbox</type>
</CustomField>