force-app/main/default/objects/Proyeccion__c/fields/NombreCliente__c.field-meta.xml
<CustomField>
    <fullName>NombreCliente__c</fullName>
    <formula>IF(Cliente__c != null, Cliente__r.Name, IF(PreVenta__c != null, PreVenta__r.Name, Prospecto__r.FirstName + &quot; &quot;+Prospecto__r.LastName))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre Cliente</label>
    <type>Text</type>
</CustomField>