force-app/main/default/objects/Proyeccion__c/fields/PersonContact__c.field-meta.xml
<CustomField>
    <fullName>PersonContact__c</fullName>
    <formula>IF(Cliente__c != null, Cliente__r.PersonContactId, Prospecto__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PersonContact</label>
    <type>Text</type>
</CustomField>