force-app/main/default/objects/Proyeccion__c/fields/PreVenta__c.field-meta.xml
<CustomField>
    <fullName>PreVenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PreVenta</label>
    <referenceTo>PreVenta__c</referenceTo>
    <relationshipLabel>Proyecciones</relationshipLabel>
    <relationshipName>Proyecciones</relationshipName>
    <type>Lookup</type>
</CustomField>