force-app/main/default/objects/Proyeccion__c/fields/Rendimiento__c.field-meta.xml
<CustomField>
    <fullName>Rendimiento__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Rendimiento</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>