force-app/main/default/objects/Proyeccion__c/fields/UltimoCorreoEnviado__c.field-meta.xml
<CustomField>
    <fullName>UltimoCorreoEnviado__c</fullName>
    <label>Último Correo Enviado</label>
    <type>DateTime</type>
</CustomField>