force-app/main/default/objects/Proyeccion__c/fields/VerConsolidado__c.field-meta.xml
<CustomField>
    <fullName>VerConsolidado__c</fullName>
    <formula>HYPERLINK(&quot;/apex/vfProyeccionConsolidado?Id=&quot;+ Id ,&quot;Ver Consolidado&quot;, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ver Consolidado</label>
    <type>Text</type>
</CustomField>