force-app/main/default/objects/Proyeccion__c/fields/VerDetallado__c.field-meta.xml
<CustomField>
    <fullName>VerDetallado__c</fullName>
    <formula>HYPERLINK(&quot;/apex/vfProyeccionDetallado?Id=&quot;+ Id ,&quot;Ver Detallado&quot;, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ver Detallado</label>
    <type>Text</type>
</CustomField>