force-app/main/default/objects/Proyeccion__c/validationRules/ValidacionComisiones.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidacionComisiones</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ComisionAporte__c &gt; 0,  ComisionSaldo__c &gt; 0 )</errorConditionFormula>
    <errorMessage>Solamente puede llenar comisión por saldo o por aporte, no ambos</errorMessage>
</ValidationRule>