force-app/main/default/objects/Proyeccion__c/validationRules/ValidarCliente.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarCliente</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
AND(Cliente__c != null, Prospecto__c != null),
AND(Cliente__c != null, PreVenta__c != null),
AND(PreVenta__c != null, Prospecto__c != null)
)</errorConditionFormula>
    <errorMessage>La proyección solo puede estar relacionada a cliente o prospecto o preventa, no ambos.</errorMessage>
</ValidationRule>